--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Estilo para os círculos */
+.circle {
+    position: absolute;
+    border: 2px solid #000;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.5);
+    color: #000;
+    font-size: 12px;
+    cursor: pointer;
+  }
+
+  .circle.active {
+    border-color: red;
+  }
