--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,20 +4,30 @@
 
 /* Estilo para os círculos */
 .circle {
-    position: absolute;
-    border: 2px solid #000;
+    width: 40px;
+    height: 40px;
+    background-color: rgb(209, 6, 6);
+    color: white;
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
+    position: absolute;
     display: flex;
-    align-items: center;
     justify-content: center;
-    background-color: rgba(255, 255, 255, 0.5);
-    color: #000;
-    font-size: 12px;
+    align-items: center;
+    font-size: 25px;
     cursor: pointer;
-  }
+    user-select: none;
+}
 
-  .circle.active {
-    border-color: red;
-  }
+/* Cursor de mira */
+#pdf-container {
+    cursor: crosshair;
+}
+
+.circle input {
+    width: 40px;
+    text-align: center;
+    font-size: 20px;
+    background-color: transparent;
+    border: none;
+    color: white;
+}
