--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,12 +22,17 @@
 #pdf-container {
     cursor: crosshair;
 }
+#pdf-container {
+    max-height: calc(100vh - 200px);
+    /* Altura máxima ajustada para a tela */
+}
 
-.circle input {
-    width: 40px;
-    text-align: center;
-    font-size: 20px;
-    background-color: transparent;
-    border: none;
-    color: white;
+@media (max-width: 640px) {
+    #pdf-container {
+        padding: 3px;
+    }
+
+    #zoom-buttons-container {
+        padding: 1px;
+    }
 }
