--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -24,6 +24,19 @@ body {
     cursor: pointer;
     user-select: none;
 }
+/* Botões de navegação */
+/* Botões de navegação (setas e número ativo) */
+button, #current-page {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+/* Botões de seta */
 
 /* Estilo básico para o modal */
 #page-selector-modal {
@@ -45,9 +58,10 @@ body {
     cursor: crosshair;
 }
 #pdf-container {
-    max-height: calc(100vh - 200px);
+    max-height: calc(100vh - 170px);
     /* Altura máxima ajustada para a tela */
 }
+
 
 @media (max-width: 640px) {
     #pdf-container {
